--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 
                 <div class="profile-info">
                     <h1 class="username">mirz</h1>
-                    <p class="bio">Занимаюсь редуксами в гта с 2021 года. Беру заказы любой сложности</p>
+                    <p class="bio">сложности</p>
                 </div>
                 
                 <!-- Исправляем кнопки действий -->
